--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,16 @@ spring.datasource.username=root
 spring.datasource.password =password
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.mail.username=ashishpushpvampi@gmail.com
+spring.mail.password=XXX
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
